--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   uuid: ^2.2.2
   intl: ^0.16.1
   http: ^0.12.2
+  shared_preferences: ^0.5.10
 
 dev_dependencies:
   flutter_test:
