--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
 
   cloud_firestore: ^0.13.5
   firebase_auth: ^0.16.1
+  image_picker: ^0.6.7+9
 
 dev_dependencies:
   flutter_test:
